Fixes site baseurl, fixes some links, and adjusts posts.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 title: ICNWG
-category: "meeting notes"
 ---
 
 <div id="content" class="column"><div class="section">
@@ -16,7 +15,7 @@ category: "meeting notes"
     <div id="node-3" class="node node-article node-promoted node-sticky node-teaser clearfix" about="/node/3" typeof="sioc:Item foaf:Document">
 
         <h2>
-      <a href="/node/3">Welcome to the International Climate Network Working Group Website</a>
+      <a href="{{site.baseurl}}/">Welcome to the International Climate Network Working Group Website</a>
     </h2>
     <span property="dc:title" content="Welcome to the International Climate Network Working Group Website" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
       <div class="meta submitted">
