Changes iframe link because the nomenu link has been removed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: ICNWG
     <span property="dc:title" content="ICNWG perfSONAR Dashboard" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
   
   <div class="content clearfix">
-    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><iframe src="http://ps-dashboard.es.net/index-nomenus.cgi?dashboard=7%3A%20ESnet%20to%20ICNWG%20Sites" seamless="" frameborder="0" height="950" width="850"></iframe><p>Also viewable on the <a href="http://ps-dashboard.es.net/index.cgi?dashboard=7%3A%20ESnet%20to%20ICNWG%20Sites">ESnet perfSONAR dashboard</a>.<br><br><br>
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><iframe src="http://ps-dashboard.es.net/index.cgi?dashboard=7%3A%20ESnet%20to%20ICNWG%20Sites" seamless="" frameborder="0" height="950" width="850"></iframe><p>Also viewable on the <a href="http://ps-dashboard.es.net/index.cgi?dashboard=7%3A%20ESnet%20to%20ICNWG%20Sites">ESnet perfSONAR dashboard</a>.<br><br><br>
 To have your node added to the dashboard, contact <a href="mailto:engage@es.net">engage@es.net</a>.  </p>
 </div></div></div>  </div>
 
